# semgrep

./: CHANGELOG.md  Makefile  dune-project  pysemgrep.nix  release_changes.md  semgrep.jsonnet  semgrep.nix  semgrep.opam  setup.py
.github/workflows/: Makefile  build-test-docker.jsonnet  build-test-windows-x86.jsonnet  build-test-windows-x86.yml  pr-checklist.yaml  test-e2e-semgrep-ci.jsonnet  test-e2e-semgrep-ci.yml  tests.jsonnet  tests.yml
.github/workflows/libs/: actions.libsonnet  docker.libsonnet  gha.libsonnet  semgrep.libsonnet
TCB/: Cap.ml  forbid_console.jsonnet
changelog.d/: 2130.added  4295.added  better-merge-base.fixed  code-8157.added  code-8524.added  code-8531.fixed  code-8678.fixed  docker-mount-error.fixed  gh-10047.fixed  gh-11028.fixed  gh-11041.fixed  gh-4315.fixed  gh-4459.fixed  gh-9522.fixed  gh-9855.fixed  ide-findings-order.fixed  php.added  saf-1978.fixed  saf-2082.added  saf-2133.fixed  saf-2145.fixed  saf-2151.fixed  saf-2193.fixed  safe-2104.fixed  sc-2293.fixed  sc-2376.added  scrt-917.added  silent-semgrep-error.fixed  yaml-float-parsing.fixed
cli/: setup.py
cli/src/semgrep/: config_resolver.py  dependency_aware_rule.py  rpc_call.py  sca_subproject_support.py  subproject.py
cli/tests/: conftest.py
languages/bash/tree-sitter/: Parse_bash_tree_sitter.ml
languages/cpp/generic/: cpp_to_generic.ml
languages/cpp/menhir/: flag_parsing_cpp.ml
languages/cpp/tree-sitter/: Parse_cpp_tree_sitter.ml
languages/dart/generic/: Parse_dart_tree_sitter.ml
languages/java/ast/: ast_java.ml
languages/java/generic/: java_to_generic.ml
languages/java/tree-sitter/: Parse_java_tree_sitter.ml
languages/javascript/menhir/: parser_js.mly
languages/python/generic/: Python_to_generic.ml
languages/python/tree-sitter/: Parse_python_tree_sitter.ml
languages/scala/recursive_descent/: Parse_scala.ml  Parser_scala_recursive_descent.ml
languages/typescript/tree-sitter/: Boilerplate_tree_sitter_typescript.ml  CST_tree_sitter_typescript.ml  Parse_typescript_tree_sitter.ml
languages/yaml/ast/: AST_yaml.ml
languages/yaml/parser/: Parse_yaml.ml
libs/collections/: Hashtbl_.ml  Hashtbl_.mli
libs/commons/: ATD_string_wrap.ml  Arg_.ml  Cache_disk.ml  CapFS.ml  CapProcess.ml  Common.ml  Common.mli  Console.ml  Datetime_.ml  Dumper.ml  File_type.ml  Filename_.ml  Filename_.mli  Fpath_.ml  Fpath_.mli  Gensym.ml  Hook.ml  Hook.mli  JSON.ml  JSON.mli  Logs_.ml  Logs_.mli  Marshaled.ml  Pcre2_.ml  Pcre2_.mli  Random_.ml  Sys_.ml  Testutil.ml  Testutil_files.ml  Testutil_mock.ml  UCmd.ml  UCommon.ml  UConsole.ml  UFile.ml  UFile.mli  UMarshal_.ml  UTmp.ml  UUnix.ml  UUnix.mli  dune
libs/commons/tests/: Commons_tests.ml  Unit_Hook.ml  Unit_external.ml  Unit_external.mli
libs/commons2/: common2.ml  dune
libs/git_wrapper/: Git_wrapper.ml
libs/lib_parsing/: Flag_parsing.ml  Pos.ml  Tok.ml
libs/lib_parsing_tree_sitter/: Parse_tree_sitter_helpers.ml
libs/lwt_platform/: dune
libs/networking/http_helpers/: http_helpers.ml  http_helpers.mli
libs/networking/http_helpers/tests/: Unit_http_helpers.ml  Unit_http_helpers.mli  dune
libs/networking/proxy/: proxy.ml
libs/ojsonnet/: Conf_ojsonnet.ml  Desugar_jsonnet.ml  Eval_jsonnet_common.ml  Eval_jsonnet_subst.ml
libs/parallelism/: Domains.ml  Domains.mli  Parallelism_config.ml  Parmap_.ml  SharedCounterTable.ml  SharedCounterTable.mli  SharedMemo.ml  rules.jsonnet
libs/parallelism/tests/: Unit_Domains.ml  (+1 more)
libs/paths/: List_files.ml
libs/process_limits/: Process_limit_metrics.ml  Process_limit_metrics.mli  Time_limit.ml
libs/profiling/: Profiling.ml
libs/telemetry/: Logging.ml  Ometrics.mli  Otel_util.ml  Telemetry.ml  Tracing.ml  Tracing.mli  dune
libs/tracing/: Tracing.mli  dune
scripts/: run-benchmarks.sh
scripts/release/: bump
src/analyzing/: Dataflow_core.ml  Dataflow_core.mli  Dataflow_when.ml
src/ast_generic/: AST_generic.ml  AST_generic_helpers.ml
src/configuring/: Flag_semgrep.ml
src/core/: Core_match.ml  Core_match.mli  Core_profiling.ml  Core_quick_profiling.ml  Core_quick_profiling.mli  Core_result.ml  Core_result.mli  Engine_kind.ml  Log_semgrep.ml  Metavariable.ml  Metavariable.mli  Range.ml  Range.mli  SCA_match.ml  Taint_trace.ml  Test_tags.ml  Test_tags.mli  Trace_data.ml  Version.ml
src/core_cli/: Core_CLI.ml  Core_actions.ml  Test_core_CLI.ml  dune
src/core_scan/: Core_metrics.ml  Core_metrics.mli  Core_scan.ml  Core_scan.mli  Core_scan_config.ml  Parmap_targets.ml  dune
src/engine/: Engine_metrics.ml  Engine_metrics.mli  Entropy.ml  Match_env.ml  Match_rules.ml  Match_rules.mli  Match_search_mode.ml  Match_taint_spec.ml
src/lsp/: Unit_LS.ml
src/lsp_legacy/: Language_server.ml
src/main/: dune  flags.sh
src/matching/: Match_patterns.ml  Match_patterns.mli
src/metachecking/: Check_rule.ml  Translate_rule.ml
src/naming/: Naming_AST.ml
src/optimizing/: Analyze_rule.ml  Analyze_rule.mli  dune
src/parsing/: Parse_SCA_version.ml  Parse_pattern.ml  Parse_pattern.mli  Parse_rule.ml  Parse_rule_helpers.ml  Parse_target.ml  Pfff_or_tree_sitter.ml  Unit_parsing.ml  dune
src/parsing/tests/: Test_parsing.ml
src/parsing_languages/: Parse_pattern2.ml  Parsing_init.ml
src/prefiltering/: Analyze_rule.ml  Analyze_rule.mli
src/reporting/: Core_json_output.ml  Nosemgrep.ml
src/rpc/: RPC_return.ml  dune
src/rule/: Analyzer.ml  Analyzer.mli  Lang.ml  Lang.mli  Mvar.ml  Mvar.mli  Rule.ml  SCA_pattern.ml  SCA_version.ml  dune
src/sca/: Dependency.ml  Dependency_source.ml  Ecosystem.ml  Lockfile.ml  Lockfile.mli  Manifest.ml  Manifest.mli  Package.ml
src/tainting/: Dataflow_tainting.ml  Taint.ml  Taint_input_env.ml  Taint_lval_env.ml  Taint_lval_env.mli  Taint_pro_hooks.ml  Taint_shape.ml
src/targeting/: Find_targets.ml  Guess_lang.ml  Skip_target.ml  Targeting_stat.ml
src/tests/: Test.ml  dune
src/typing/: Typing.ml
tests/rules/: decorated-field.yaml  decorated_field_pattern.yaml  js_bracket.js  js_bracket.yaml  taint_assume_safe_booleans2.php  taint_assume_safe_booleans2.yaml  taint_assume_safe_numbers4.php  taint_assume_safe_numbers4.yaml
(+870 files in other folders)
